--- a/codes/LearnEnglish/app/src/main/res/values/styles.xml
+++ b/codes/LearnEnglish/app/src/main/res/values/styles.xml
@@ -6,5 +6,7 @@
         <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
         <item name="colorAccent">@color/colorAccent</item>
     </style>
-
+    <style name="progressBarRed" parent="@style/Theme.AppCompat">
+        <item name="colorAccent">@color/colorRed</item>
+    </style>
 </resources>
